# succubot

./: Cargo.toml  README.markdown
discord-oxide/: Cargo.toml
discord-oxide/src/: lib.rs  main.rs
discord-oxide/src/modules/: bot.rs  cmd.rs  err.rs  gateway.rs  mod.rs  reply.rs  tests.rs  units.rs
