[package]
name = "discord-oxide"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = "0.12.22"
serde_json = "1.0.142"
futures-util = "0.3.31"
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio-tungstenite = { version = "0.27.0", features = ["native-tls"] }
